tests/type_errors/wrong_arity.sy
def main
: Int -> Int
: a = f ' a

def f
: Int -> Int -> Int
: a b = a + b

--+ expected exit status: 3
--+ expected stderr:
--+ check err: CheckUnify { msg: "Failed to merge types", a: "Function(Int, Int)", b: "Int", span: Span(0, 38) }
